--- a/apps/builder/src/i18n/locale/no-NO.json
+++ b/apps/builder/src/i18n/locale/no-NO.json
@@ -814,7 +814,8 @@
             "data_production": "Produksjon",
             "data_mock": "Feil",
             "json": "Mock JSON Outputs",
-            "on_deploy": "Bruk mock JSON utdata på distribuert app"
+            "on_deploy": "Bruk mock JSON utdata på distribuert app",
+            "duration": "Varetid (ms)"
           }
         },
         "s3": {
@@ -1958,7 +1959,8 @@
         "default_width": "Default width",
         "quick_filter_setting": "Raskt filter",
         "exclude_hidden_columns": "Ekskluder skjulte kolonner",
-        "allow_users_select": "Tillat radmarkering"
+        "allow_users_select": "Tillat radmarkering",
+        "enable_pagination": "Paginering"
       },
       "setter_tooltip": {
         "action": "Handlinger for komponenter utløser spørringer, kontroller eller ringe data i ressursene dine. Flere async handlinger vil utføres parallelt.",
