--- a/apps/builder/src/i18n/locale/ru-RU.json
+++ b/apps/builder/src/i18n/locale/ru-RU.json
@@ -814,7 +814,8 @@
             "data_production": "Производство",
             "data_mock": "Закрепить",
             "json": "Mock JSON Outputs",
-            "on_deploy": "Использовать мак JSON выходы в развернутом приложении"
+            "on_deploy": "Использовать мак JSON выходы в развернутом приложении",
+            "duration": "Длительность работы"
           }
         },
         "s3": {
@@ -1958,7 +1959,8 @@
         "default_width": "Default width",
         "quick_filter_setting": "Быстрый фильтр",
         "exclude_hidden_columns": "Исключить скрытые столбцы",
-        "allow_users_select": "Разрешить выбор строк"
+        "allow_users_select": "Разрешить выбор строк",
+        "enable_pagination": "Пагинация"
       },
       "setter_tooltip": {
         "action": "Ваши действия для компонентов триггерные запросы, контрольные компоненты или вызов данных в ваших ресурсах. Несколько асинхронных действий будут выполняться параллельно.",
