--- a/apps/builder/src/i18n/locale/zh-CN.json
+++ b/apps/builder/src/i18n/locale/zh-CN.json
@@ -814,7 +814,8 @@
             "data_production": "生产数据",
             "data_mock": "模拟数据",
             "json": "模拟JSON输出",
-            "on_deploy": "在部署应用上也使用模拟JSON输出"
+            "on_deploy": "在部署应用上也使用模拟JSON输出",
+            "duration": "运行时长(毫秒)"
           }
         },
         "s3": {
@@ -1958,7 +1959,8 @@
         "default_width": "Default width",
         "quick_filter_setting": "快速筛选",
         "exclude_hidden_columns": "不包含隐藏列",
-        "allow_users_select": "允许选中行"
+        "allow_users_select": "允许选中行",
+        "enable_pagination": "分页"
       },
       "setter_tooltip": {
         "action": "您对组件的操作会触发查询、控制组件或调用资源中的数据等操作。多个异步操作将并行执行。",
