--- a/apps/builder/src/i18n/locale/da-DK.json
+++ b/apps/builder/src/i18n/locale/da-DK.json
@@ -814,7 +814,8 @@
             "data_production": "Produktion",
             "data_mock": "Mock",
             "json": "Mock JSON Outputs",
-            "on_deploy": "Brug mock JSON udgange på implementeret app"
+            "on_deploy": "Brug mock JSON udgange på implementeret app",
+            "duration": "Varighed af køretid"
           }
         },
         "s3": {
@@ -1958,7 +1959,8 @@
         "default_width": "Default width",
         "quick_filter_setting": "Hurtigt filter",
         "exclude_hidden_columns": "Udeluk skjulte kolonner",
-        "allow_users_select": "Tillad valg af række"
+        "allow_users_select": "Tillad valg af række",
+        "enable_pagination": "Sideinddeling"
       },
       "setter_tooltip": {
         "action": "Dine handlinger til komponenter udløser forespørgsler, styrer komponenter eller kalder data i dine ressourcer. Flere async handlinger vil blive udført parallelt.",
