--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -814,7 +814,8 @@
             "data_production": "Παραγωγή",
             "data_mock": "Μόδα",
             "json": "Mock JSON Outputs",
-            "on_deploy": "Χρήση των εικονικών εξόδων JSON στην αναπτυγμένη εφαρμογή"
+            "on_deploy": "Χρήση των εικονικών εξόδων JSON στην αναπτυγμένη εφαρμογή",
+            "duration": "Διάρκεια εκτέλεσης (ms)"
           }
         },
         "s3": {
@@ -1958,7 +1959,8 @@
         "default_width": "Default width",
         "quick_filter_setting": "Γρήγορο φίλτρο",
         "exclude_hidden_columns": "Εξαίρεση κρυφών στηλών",
-        "allow_users_select": "Επιτρέπεται η επιλογή γραμμής"
+        "allow_users_select": "Επιτρέπεται η επιλογή γραμμής",
+        "enable_pagination": "Σελιδοποίηση"
       },
       "setter_tooltip": {
         "action": "Οι ενέργειές σας στα στοιχεία ενεργοποιούν ερωτήματα, ελέγχουν τα στοιχεία ή καλούν τα δεδομένα στους πόρους σας. Πολλαπλές ενέργειες async θα εκτελεστούν παράλληλα.",
