--- a/apps/builder/src/i18n/locale/sv-SE.json
+++ b/apps/builder/src/i18n/locale/sv-SE.json
@@ -814,7 +814,8 @@
             "data_production": "Produktion",
             "data_mock": "Mock",
             "json": "Mock JSON Outputs",
-            "on_deploy": "Använd mock JSON-utgångarna på distribuerad app"
+            "on_deploy": "Använd mock JSON-utgångarna på distribuerad app",
+            "duration": "Löptid (ms)"
           }
         },
         "s3": {
@@ -1958,7 +1959,8 @@
         "default_width": "Default width",
         "quick_filter_setting": "Snabb filter",
         "exclude_hidden_columns": "Exkludera dolda kolumner",
-        "allow_users_select": "Tillåt radval"
+        "allow_users_select": "Tillåt radval",
+        "enable_pagination": "Sidnumrering"
       },
       "setter_tooltip": {
         "action": "Dina åtgärder för komponenter utlöser frågor, kontrollkomponenter eller anropar data i dina resurser. Flera asynska åtgärder kommer att utföras parallellt.",
