--- a/apps/builder/src/i18n/locale/de-DE.json
+++ b/apps/builder/src/i18n/locale/de-DE.json
@@ -3596,7 +3596,10 @@
         "app": {
           "desc": "Nachdem Sie Ihre App zur Community beigetragen haben, können andere Benutzer ihre Schnittstelle einsehen, ihre Aktionen ausführen und sie forken. Beim Forking einer App sind die Informationen zur Ressourcen-Konfiguration nicht enthalten, so dass keine Sorgen um die Offenlegung von Ressourcen-Konfigurationsinformationen bestehen."
         },
-        "contribute_only": "Nur App beitragen"
+        "contribute_only": "Nur App beitragen",
+        "contribute_together": "App und zugehöriger KI-Agent beitragen",
+        "contribute_only_tips": "Nur um die App beizutragen. Wenn es in dieser App zugehörige KI-Agenten gibt, können Benutzer die KI-Agenten nicht forken.",
+        "contribute_together_tips": "Wenn es in dieser App assoziierte KI-Agenten gibt, werden die zugehörigen KI-Agenten gemeinsam zum Marktplatz beitragen. "
       },
       "social_media": {
         "label": "Teilen auf",
