--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -3596,7 +3596,10 @@
         "app": {
           "desc": "Αφού συνεισφέρετε την εφαρμογή σας στην κοινότητα, άλλοι χρήστες μπορούν να δουν τη διεπαφή της, να εκτελέσει τις ενέργειές της και να την πιρουνίσει. Όταν διχάζετε μια εφαρμογή, οι πληροφορίες διαμόρφωσης πόρων δεν περιλαμβάνονται, οπότε δεν χρειάζεται να ανησυχείτε για την αποκάλυψη πληροφοριών διαμόρφωσης πόρων."
         },
-        "contribute_only": "Συνεισφέρετε μόνο εφαρμογή"
+        "contribute_only": "Συνεισφέρετε μόνο εφαρμογή",
+        "contribute_together": "Συνεισφέρετε την εφαρμογή και το συνδεδεμένο AI Agent",
+        "contribute_only_tips": "Για να συνεισφέρετε μόνο την εφαρμογή. Εάν υπάρχουν συνδεδεμένοι παράγοντες τεχνητής νοημοσύνης σε αυτήν την εφαρμογή, οι χρήστες δεν μπορούν να διχάζουν τους πράκτορες τεχνητής νοημοσύνης.",
+        "contribute_together_tips": "Εάν υπάρχουν συνδεδεμένοι AI Agents σε αυτήν την εφαρμογή, οι συνδεδεμένοι AI Agents θα συνεισφέρουν στην αγορά μαζί. "
       },
       "social_media": {
         "label": "Κοινοποίηση στο",
