--- a/apps/builder/src/i18n/locale/ja-JP.json
+++ b/apps/builder/src/i18n/locale/ja-JP.json
@@ -3596,7 +3596,10 @@
         "app": {
           "desc": "アプリをコミュニティに貢献すると、他のユーザーがインターフェイスを表示したり、アクションを実行したり、フォークしたりできます。 アプリをフォークするとき、リソース構成情報は含まれないため、リソース構成情報の開示を心配する必要はありません。"
         },
-        "contribute_only": "アプリのみに貢献する"
+        "contribute_only": "アプリのみに貢献する",
+        "contribute_together": "アプリと関連する AI Agent に貢献する",
+        "contribute_only_tips": "アプリにAIエージェントが関連付けられている場合、ユーザーはAIエージェントをフォークできません。",
+        "contribute_together_tips": "このアプリにAIエージェントが関連付けられている場合、AIエージェントは一緒に市場に貢献します。 "
       },
       "social_media": {
         "label": "共有先：",
