--- a/apps/builder/src/i18n/locale/ru-RU.json
+++ b/apps/builder/src/i18n/locale/ru-RU.json
@@ -3596,7 +3596,10 @@
         "app": {
           "desc": "После добавления приложения в сообщество, другие пользователи могут просматривать его интерфейс, запускать его действия и форкнуть его. При форке приложения информация о конфигурации ресурса не включена, поэтому нет необходимости беспокоиться о раскрытии информации о конфигурации ресурса."
         },
-        "contribute_only": "Внести вклад только в приложение"
+        "contribute_only": "Внести вклад только в приложение",
+        "contribute_together": "Помочь приложению и связанному с ним агенту ИИ",
+        "contribute_only_tips": "Только для участия в приложении. Если в этом приложении есть ассоциированные агенты ИИ, пользователи не могут форкнуть агенты ИИ.",
+        "contribute_together_tips": "Если в этом приложении есть ассоциированные агенты ИИ, агенты ИИ будут участвовать на бирже вместе. "
       },
       "social_media": {
         "label": "Поделиться на",
