--- a/apps/builder/src/i18n/locale/no-NO.json
+++ b/apps/builder/src/i18n/locale/no-NO.json
@@ -3596,7 +3596,10 @@
         "app": {
           "desc": "Etter at du har bidratt med appen til samfunnet, kan andre brukere se grensesnittet, kjøre handlingene dens og gaffke den. Når du har lagt til en app, er ikke ressurskonfigurasjonsinformasjonen inkludert, så det er ikke nødvendig å bekymre deg om utlevering av informasjon om ressurskonfigurasjon."
         },
-        "contribute_only": "Bidra kun med appen"
+        "contribute_only": "Bidra kun med appen",
+        "contribute_together": "Bidra til App og tilhørende AI Agent",
+        "contribute_only_tips": "For å bidra bare med appen. Hvis det er tilknyttede AI-agenter i denne appen, kan brukere ikke forke AI-agentene.",
+        "contribute_together_tips": "Hvis det finnes tilknyttede AI-agenter i denne appen, vil de tilknyttede AI-agentene bli bidratt til en markedsplass sammen. "
       },
       "social_media": {
         "label": "Del på",
